--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@smastrom/react-rating": "^1.5.0",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.1.3",
     "react-tabs": "^6.1.0",
